@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6730 2004/07/29 23:21:34 wiz Exp $
+$NetBSD: CHANGES,v 1.6731 2004/07/30 05:23:37 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3645,3 +3645,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated cyrus-imapd22 to 2.2.8 [recht 2004-07-29]
 	Updated uvscan to 4.24.1 [wiz 2004-07-29]
 	Added m1-0.7.4c [wiz 2004-07-29]
+	Updated alee-ttf to 0.4 [minskim 2004-07-30]
